# finalBackend

./: CMakeLists.txt  README.md  determinand.cpp  main.cpp  physicalPage.cpp  physicalPage.hpp  sample.hpp  sampleset.cpp  sampleset.hpp  testRead.cpp
